--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
-@import url("../styles/header.css");
-@import url("../styles/banner.css");
-@import url("../styles/carrosel.css");
+@import url("./styles/header.css");
+@import url("./styles/banner.css");
+@import url("./styles/carrosel.css");
+@import url("./styles/topicos.css");
+@import url("./styles/banner_final.css");
+@import url("./styles/footer.css");
 :root{
     --cor-de-fundo: #EBECEE;
     --branco: #FFFFFF;
